# openAL_build_test

./: .gitmodules  CMakeLists.txt
src/: main.cpp  openal_debug.h
